--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="matrix">
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="matrix">
     <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class = "main">
     <p id="add-container">
-      <label for="new-task">Add Item</label>
-      <div class="new-task__wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+      <h3 class="heading1">Add Item</h3>
+      <div class="new-task-wrapper">
+        <input id="new-task" class="task text-area" type="text">
+        <button class="add-button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="heading">Todo</h3>
     <ul id="todo-list">
-      <li>
-        <input type="checkbox">
+      <li class="todo-container list">
+        <input type="checkbox" class="checkbox">
         <label class="task">Pay Bills</label>
-        <input type="text" class="task">
+        <input type="text" class="task text-area">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete"></button>
+        <button class="delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+      <li class="edit-mode list">
+        <input type="checkbox" class="checkbox">
+        <label class="task edit-task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task text-area">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="delete"></button>
+        <button class="delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="heading">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+      <li class="completed-mode list">
+        <input type="checkbox" class="checkbox" checked>
+        <label class="task completed-task">See the Doctor</label>
+        <input type="text" class="task text-area">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete"></button>
+        <button class="delete"><img class="delete-img" src="./remove.svg" alt="delete"></button>
       </li>
     </ul>
   </main>
