refactor: adjust HTML-formatting according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class = "main">
-    <p id="add-container">
+    <section id="add-container">
       <h3 class="heading1">Add Item</h3>
       <div class="new-task-wrapper">
         <input id="new-task" class="task text-area" type="text">
         <button class="add-button">Add</button>
       </div>
-    </p>
+    </section>
     <h3 class="heading">Todo</h3>
     <ul id="todo-list">
       <li class="todo-container list">
